API validation ve logging eklendi

--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -19,6 +19,7 @@
         <input style="margin-top:10px ;" class="button" type="submit" value="Register">
     </form>
     <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+    <p>Admin Panel? <a href="/admin/">Admin Login</a></p>
 </div>
 
 
