--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -12,6 +12,7 @@
         <input class="button" type="submit" value="Login">
     </form>
     <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+    <p>Admin Panel? <a href="/admin/">Admin Login</a></p>
 </div>
 
 
