--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -8,8 +8,15 @@
     </div>
 
     {% if request.user.is_authenticated %}
-    <a href="{% url 'logout' %}">Logout</a> {% else %}
-    <a href="{% url 'login' %}">Login</a> {% endif %}
+    <div>
+        {% if request.user.is_staff or request.user.is_superuser %}
+        <a href="/admin/" style="margin-right: 10px;">Admin Panel</a>
+        {% endif %}
+        <a href="{% url 'logout' %}">Logout</a>
+    </div>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    {% endif %}
 </div>
 
 
